@@ -3,7 +3,7 @@ Section: web
 Priority: optional
 Maintainer: Bastian Kleineidam <calvin@debian.org>
 Standards-Version: 3.5.6.0
-Build-Depends: python2-base, debhelper (>= 3.0.0), debconf
+Build-Depends: python2-dev, debhelper (>= 3.0.0), debconf
 
 Package: webcleaner
 Architecture: any
